@@ -2,7 +2,10 @@
  - (dtucker) [session.c] Have session_break_req not attempt to send a break
    if TIOCSBRK and TIOCCBRK are not defined (eg Cygwin).
  - (dtucker) [canohost.c] Bug #336: Only check ip options if IP_OPTIONS is
-   defined (eg really old Linux).
+   defined (fixes compile error on really old Linuxes).
+ - (dtucker) [defines.h] Bug #336: Add CMSG_DATA and CMSG_FIRSTHDR macros if
+   not already defined (eg Linux with some versions of libc5), based on those
+   from OpenBSD.
 
 20030802
  - (dtucker) [monitor.h monitor_wrap.h] Remove excess ident tags.
@@ -791,4 +794,4 @@
  - Fix sshd BindAddress and -b options for systems using fake-getaddrinfo.
    Report from murple@murple.net, diagnosis from dtucker@zip.com.au
 
-$Id: ChangeLog,v 1.2881 2003/08/07 03:29:04 dtucker Exp $
+$Id: ChangeLog,v 1.2882 2003/08/07 05:58:28 dtucker Exp $
